--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "lint:fix": "oxlint --fix --report-unused-disable-directives-severity error",
     "format": "oxfmt",
     "format:check": "oxfmt --check",
+    "lint-staged": "lint-staged",
+    "commitlint": "commitlint",
     "test": "vitest run",
     "test:watch": "vitest",
+    "prepare": "husky",
     "prepack": "pnpm run clean && pnpm run build"
   },
   "dependencies": {
@@ -57,12 +60,25 @@
     "yaml": "^2.8.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
     "@types/node": "^22.17.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,mjs,cjs}": [
+      "oxlint --fix --report-unused-disable-directives-severity error",
+      "oxfmt"
+    ],
+    "*.{json,md}": [
+      "oxfmt"
+    ]
   },
   "engines": {
     "node": ">=22"
