--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "prepare": "husky",
+    "release": "release-it",
+    "release:ci": "release-it --ci",
+    "release:dry": "release-it --ci --dry-run",
     "prepack": "pnpm run clean && pnpm run build"
   },
   "dependencies": {
@@ -62,11 +65,13 @@
   "devDependencies": {
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
+    "@release-it/conventional-changelog": "^10.0.5",
     "@types/node": "^22.17.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
+    "release-it": "^19.2.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
